# jsip-exchange

./: .gitignore  CLAUDE.md  Dockerfile  README.md  dune-project  jsip-exchange.opam  perf-balanced.data  perf-balanced.data.old  perf.data  questions_to_ask.txt  run-dashboard.sh  scratch.txt
.claude/: settings.json
.claude/skills/bonsai-web/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/frontend-design/: SKILL.md
.claude/skills/ocaml-ppx/: SKILL.md
.claude/skills/ocaml-style/: coding_best_practices.md  styleguide.md  writing_tests.md
.github/workflows/: benchmark.yml  build-image.yml  ci.yml
app/bots/src/: book_filler_sadat.ml  book_filler_sadat.mli  bot_random.ml  (+12 more)
app/dashboard/server/: dune  main.ml
certs/: Alice.crt  Alice.key  Bob.crt  Bob.key  ca.crt  ca.key  ca.srl  new_participant_request.sh  rogue.crt  rogue.key  rogue_ca.crt  rogue_ca.key  rogue_ca.srl  server.crt  server.key  setup_ca.sh  setup_rogue_ca.sh  sign_participant.sh
dev/bench/: data.js
doc/: ai-tools-intro.md  exercises-part-1.md  exercises-part-2.md  exercises-part-3.md  exercises-part-4.md  exercises-week-1.md
lib/gateway/test/: dune  test_dispatcher.ml  test_end_to_end.ml  test_exchange_command.ml  test_exchange_stats.ml  test_metrics.ml  test_protocol.ml  test_rate_limiter.ml  test_rpc_shapes.ml  test_rpc_updated.ml  test_symbol_directory.ml  test_tls.ml
performance/runs/: README.md  aug_table_vs_map.txt  basic_functions_map_only.txt  ex6_replay_bbo_after.txt  ex6_replay_bbo_before.txt  ex6_replay_engine_tuning.txt  existing_after.txt  existing_after_with_snapshot.txt  existing_before_with_snapshot.txt  order_book_nested_vs_flat.txt  scenario_counts.txt  snapshot_after.txt  snapshot_before.txt  snapshot_default.txt  symbol_int_after.txt  symbol_int_before.txt
performance/src/: allocations.ml  allocations.mli  associatives.ml  associatives.mli  dune  jbuild  jsip_exchange_perf_lib.ml  jsip_exchange_perf_lib.mli  key_value_stores.ml  key_value_stores.mli  latency_histogram.ml  latency_histogram.mli  replay.ml  replay.mli  sequences.ml  sequences.mli  workload_generator.ml  workload_generator.mli
(+194 files in other folders)
